--- a/style.css
+++ b/style.css
@@ -66,3 +66,25 @@ footer {
   height: 50px;
   background-color: #AAAAAA;
 }
+
+@media screen and (max-width:768px) {
+  main {
+    width: 100%;
+    display: block;
+    justify-content: center;
+  }
+  
+  .box {
+    width: 90%;
+    margin: auto;
+  }
+  
+  .box:nth-child(1),
+  .box:nth-child(2) {
+    margin-bottom: 20px;
+  }
+  
+  .box:last-child {
+    margin: auto;
+  }
+}
